Fixed smoothing on mobile
Fix for Android mobile browser (Firefox and Chromium ones)

--- a/static/style.css
+++ b/static/style.css
@@ -192,6 +192,6 @@ button {
   border-radius: 5px;
 }
 
-html {
-  scroll-behavior: smooth;
+*, html {
+  scroll-behavior: smooth !important;
 }
